--- a/source/_posts/Index/前端面试基础.md
+++ b/source/_posts/Index/前端面试基础.md
@@ -3593,6 +3593,10 @@ animate()
 > will-change: https://blog.csdn.net/Mancuojie/article/details/120632389
 >
 > 浏览器渲染：https://www.yuque.com/i_geek/rules
+>
+> chrome浏览器源码： http://www.taodudu.cc/news/show-1646530.html?action=onClick
+>
+> https://zhuanlan.zhihu.com/p/228734855
 
 浏览器渲染流程
 
@@ -3650,4 +3654,12 @@ animate()
     * 5 增加了头部压缩
 
 **浏览器安全**
+
+#  每日一题
+
+页面变黑白
+
+```
+filter: grayscale(1); // 1 是黑白， 0 是彩色， （0，1）之间，，，
+```
 
