--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -335,24 +335,30 @@ ls.pop_back();
   * 数组支持随机访问 O(1)
 * 050 [ 向下的路径节点之和](https://leetcode.cn/problems/6eUYwP/)
   * 易错，复习
-
 * 053 [二叉搜索树中的中序后继](https://leetcode.cn/problems/P5rCT8/)
   * 不熟练，复习
-
 * 056 [二叉搜索树中两个节点之和](https://leetcode.cn/problems/opLdQZ/)
   * 代码简化
-
 * 057 [值和下标之差都在给定的范围内](https://leetcode.cn/problems/7WqeDu/)
   * 不会，看解析，复习
   * 滑动窗口+哈希表： 越界问题，绝对值问题，lower_bound
   * 桶： 学习
     * 注意编号时负数的处理
-
 * 058 [日程表](https://leetcode.cn/problems/fi9suh/)
   * lower_bound, begin等迭代器使用，不熟悉，复习
   * 线段树，学习
+* 061 [和最小的 k 个数对](https://leetcode.cn/problems/qn8gGX/)
 
-* 
+  * 不会，看解析
+  * 去重的巧妙性
+* 065 [最短的单词编码](https://leetcode.cn/problems/iSwD2y/)
+  * 用集合移除的方式效率更高
+
+* 067 [ 最大的异或](https://leetcode.cn/problems/ms70jA/)
+  * 二进制问题，转化为字典树
+  * 字典树处理，看解析，第一个评论解析比官方更易理解
+  * 复习复习复习！！！
+
 
 #  每日一题
 
@@ -383,7 +389,7 @@ ls.pop_back();
 * 1048 [最长字符串链](https://leetcode.cn/problems/longest-string-chain/)
 * 1015 [可被 K 整除的最小整数](https://leetcode.cn/problems/smallest-integer-divisible-by-k/)
   * 数学: 取模，递推
-  * 优化：当 *k* 为 22 或者 55 的倍数时，能够被 *k* 整除的数字末尾一定不为 1，所以此时一定无解
+  * 优化：当 *k* 为 2 或者 5的倍数时，能够被 *k* 整除的数字末尾一定不为 1，所以此时一定无解
 
 
 ```c++
@@ -396,7 +402,9 @@ ls.pop_back();
         // resid 重复出现则表示进入循环 ********重要：退出判断*******
 ```
 
-
+* 2611 [老鼠和奶酪](https://leetcode.cn/problems/mice-and-cheese/)
+  * 贪心+排序/优先队列
+  * 注意问题的转化，将问题转化为在n个数中选择k个数，使得和最大，也就是求n个中前k个大的数的和     巧妙！！！
 
 #  题型
 
@@ -434,6 +442,10 @@ ls.pop_back();
 * 206 [反转链表](https://leetcode.cn/problems/reverse-linked-list/)
 * 234 [ 回文链表](https://leetcode.cn/problems/palindrome-linked-list/)
   * 找中心点，反转，比对，每个步骤都分开做，因为合在一起太复杂，容易错
+* offer 专项077 [链表排序](https://leetcode.cn/problems/7WHec2/)
+  * 148
+  * 归并排序，复习复习复习！！！  考察归并和链表
+
 
 ##  树
 
@@ -532,7 +544,7 @@ ls.pop_back();
 
 ##  回溯
 
-> 1 先排序有利于解决问题
+> 1 先排序有利于解决问题     有重复元素则排序
 >
 > 2 对于重复的元素，采用**标记**的方式，相同的元素只有在前面的元素使用后后面的元素才能使用，保证排列组合不会重复
 >
@@ -551,6 +563,14 @@ ls.pop_back();
 * 301 [ 删除无效的括号](https://leetcode.cn/problems/remove-invalid-parentheses/)
   * 困难，待做
 * 494 [目标和](https://leetcode.cn/problems/target-sum/)
+* offer专项081- 087
+  * 有重复元素则排序，并保证和前一个元素不同，如果和前一个元素相同则continue
+  * 无重复元素全排列可以用swap
+  * 有重复元素全排需要使用标记，不用用swap, 因为swap后会乱序，导致不能判断和前一个元素是否相同
+
+* offer专项[085. 生成匹配的括号](https://leetcode.cn/problems/IDBivT/)
+  * 不熟悉，复习
+
 
 ##  差分数组
 
@@ -565,7 +585,6 @@ ls.pop_back();
 
 * 每日一题：1015
 * 29 [两数相除](https://leetcode.cn/problems/divide-two-integers/)
-  * 
 
 快速幂/快速乘： 下面的面试部分有讲解
 
@@ -595,6 +614,11 @@ int clm(int n, int m){
 }
 ```
 
+* offer专项 [ 按权重生成随机数](https://leetcode.cn/problems/cuyjEf/)
+  * 就是在权重范围内生成随机数，随机数落在哪个区间，就返回那个区间对应的数
+
+
+
 ##  字符串
 
 > 对字符串排序
@@ -610,7 +634,95 @@ int clm(int n, int m){
 > [视频讲解](https://www.bilibili.com/video/BV1QT4y1Z7rR/?spm_id_from=333.337.search-card.all.click&vd_source=7230a052308bbb41976f248d2c778e3a)
 
 * offer 专项 058
+  * map + 二分查找，简洁，易懂
+    * 容器查找为空则结果等于begin，容器为空的情况下begin == end   不熟悉，复习
 
+  * 线段树
+    * lazy记录这个区间所有点都已预定 tree记录这个区间有至少一个点被预定过了
+
+##  二进制
+
+> 异或性质
+>
+> * a^b = b^a
+> * x = a^b    ---->  a = x^b
+
+* offer专项 067 [ 最大的异或](https://leetcode.cn/problems/ms70jA/)
+  * 字典树处理，看解析，第一个评论解析比官方更易理解
+
+
+
+##  二分查找
+
+offer专项 068 --- 073
+
+* offer 专项 072 [求平方根](https://leetcode.cn/problems/jJ0w9p/)
+  * 学习这种写法，多场景可用，记录可能满足的情况(and = mid)
+    * 将可能满足条件的情况记录，另一种情况直接不满足条件，用l<=r退出，或l<r退出，根据具体情况而定
+
+```c++
+class Solution {
+public:
+    int mySqrt(int x) {
+        int l = 0, r = x, ans = -1;
+        while (l <= r) {
+            int mid = l + (r - l) / 2;
+            if ((long long)mid * mid <= x) {
+                ans = mid;
+                l = mid + 1;
+            } else {
+                r = mid - 1;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+##  动态规划
+
+offer专项 088-105
+
+* 092 [翻转字符](https://leetcode.cn/problems/cyJERH/)
+  * 复习，记录状态简化问题
+* 093 [最长斐波那契数列](https://leetcode.cn/problems/Q91FMA/)
+  * 复习，不会
+* 094 [最少回文分割](https://leetcode.cn/problems/omKAoA/)
+  * 分两步
+    * 预处理**任意两点区间内是否是回文串**，复习复习复习，巧妙解法
+    * 常规动态规划
+* 096 [ 字符串交织](https://leetcode.cn/problems/IY6buf/)
+  * 不会，复习
+
+* 097 [子序列的数目](https://leetcode.cn/problems/21dk04/)
+  * 不会，复习
+
+
+##  广度深度优先
+
+> 在递归开始或者在进入递归前进行标记，这样不容易出错
+>
+> 构建图：
+>
+> * 字符串等情况，先将字符串映射为数字，便于使用vector存储图结构
+>
+> 广度优先：一般用于计算最短路径的场景题
+
+offer专项 105-
+
+* 106 二分图
+  * 不熟悉，复习
+
+* 107 [ 矩阵中的距离](https://leetcode.cn/problems/2bCMpM/)
+  * 动态规划和广度优先  复习 不熟悉
+* 108 [单词演变](https://leetcode.cn/problems/om3reC/)
+  * 不会， 复习
+  * 图的构建不熟悉，复习
+  * 遍历记得标记已经遍历的元素
+  * 广度优先
+* 111 [计算除法](https://leetcode.cn/problems/vlzXQL/)
+  * 构建图，不熟悉，复习
+  * 广度优先
 
 
 #  PS
@@ -817,6 +929,28 @@ cout << i << " " << d << " " << s << endl;
 //打印： 42 3.14 Test
 ```
 
+* 向上向下四舍五入取整（以下只针对浮点数的运算）
+
+```c++
+// 向上  
+ceil()
+// 向下
+floor()
+// 四舍五入
+round()
+```
+
+* 整数向上取整
+
+```c++
+// 1
+int curh = p%mode == 0 ? 0 : 1;
+curh += (p/mode);
+
+// 2
+int curh = (p + mode-1)/mode;
+```
+
 
 
 #  常用
@@ -876,11 +1010,26 @@ list
 * pop_back
 * erase
 
+###  二分查找
+
+| [lower_bound](https://zh.cppreference.com/w/cpp/container/map/lower_bound) | 返回指向首个*不小于*给定键的元素的迭代器 (公开成员函数) |
+| ------------------------------------------------------------ | ------------------------------------------------------- |
+| [upper_bound](https://zh.cppreference.com/w/cpp/container/map/upper_bound) | 返回指向首个*大于*给定键的元素的迭代器                  |
+
+
+
 ###  注意点
 
 容器为空的情况下可以调用 mp.count(key)
 
 容器为空的情况下查找返回的迭代器为 mp.end() ,   而容器为空的情况下mp.begin() == mp.end()
+
+```c++
+unordered_map<vector<int>, int> mp;  // 报错
+map<vector<int>, int> mp; // 正确  
+```
+
+
 
 
 
