--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -512,6 +512,7 @@ ls.pop_back();
   * 递归思想
   * 前缀和
   * unordered_map中不使用的元素实时移除，性能更高
+  * 注意溢出
 * 538 [把二叉搜索树转换为累加树](https://leetcode.cn/problems/convert-bst-to-greater-tree/)
   * 递归思想
   * 利用全局变量
@@ -525,20 +526,31 @@ ls.pop_back();
 
 > 栈存储索引，通过索引取值，就不用存键值对，空间开销更小
 >
-> 在一维数组中对每一个数找到第一个比自己小的元素。这类“在一维数组中找第一个满足某种条件的数”的场景就是典型的单调栈应用场景
+> 在一维数组中对每一个数找到第一个比自己小/大的元素。这类“在一维数组中找第一个满足某种条件的数”的场景就是典型的单调栈应用场景
+>
+> * 找到右边第一个比自己小的值   
+>   * 往右走
+>     * cur比栈顶大则入栈
+>     * cur比栈顶小则while(cur比栈顶小)出栈，直到比栈顶大则继续入栈
+>       * 出栈元素右边第一个比自己小的元素就是cur, 进行记录
+>       * **技巧**： cur左边第一个比自己大元素就是cur可以入栈时，栈顶的元素   （典型案例：84）
+>
+> 典型案例：84
 
 *  581 [最短无序连续子数组](https://leetcode.cn/problems/shortest-unsorted-continuous-subarray/)
-   *  单调栈
-   *  双指针，模拟单调栈
-
+   *  感觉和单调栈没啥关系
+   *  双指针，模拟正常思考过程
+   *  往右走，则需要一直递增，若不满足则记录该位置，该位置是需要往左移动的，往右走完，记录的就是最右需要往左移的位置
+      *  往左走，则需要一直低价，若满足，，，
 *  739 [每日温度](https://leetcode.cn/problems/daily-temperatures/)
    *  栈存储index值，通过 t[st[i]]拿到值
-
 *  42 [接雨水](https://leetcode.cn/problems/trapping-rain-water/)
-   *  双指针的策略没有理解透彻，复习
-
+   *  动态规划易理解   推荐
+*  双指针的策略没有理解透彻，复习，对动态规划的优化，不易理解
+   *  单调栈不简洁，不易理解
 *  84 [ 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
    * 找到左边第一个比当前元素小的，找到右边第一个比当前元素小的
+   * 注意初始化
 *  85 [最大矩形](https://leetcode.cn/problems/maximal-rectangle/)
    * 需要依赖84才能做出来，没有84的基础基本做不了
 
@@ -562,12 +574,17 @@ ls.pop_back();
   * 递归+剪枝
 * 301 [ 删除无效的括号](https://leetcode.cn/problems/remove-invalid-parentheses/)
   * 困难，待做
+  * 广度优先，最短，最少就用广度优先
+  * 不会不会不会
 * 494 [目标和](https://leetcode.cn/problems/target-sum/)
 * offer专项081- 087
   * 有重复元素则排序，并保证和前一个元素不同，如果和前一个元素相同则continue
   * 无重复元素全排列可以用swap
-  * 有重复元素全排需要使用标记，不用用swap, 因为swap后会乱序，导致不能判断和前一个元素是否相同
-
+  * 有重复元素全排需要使用标记，不能用swap, 因为swap后会乱序，导致不能判断和前一个元素是否相同
+  * 排序
+    * 保证和前一个元素不同
+    * 标记
+  
 * offer专项[085. 生成匹配的括号](https://leetcode.cn/problems/IDBivT/)
   * 不熟悉，复习
 
@@ -584,6 +601,8 @@ ls.pop_back();
 ##  数学
 
 * 每日一题：1015
+  * 重要定理：(a*b)%p = (a%p) *( b%p)%p
+  * 重要定理：(a+b)%p = ((a%p) + ( b%p))%p
 * 29 [两数相除](https://leetcode.cn/problems/divide-two-integers/)
 
 快速幂/快速乘： 下面的面试部分有讲解
@@ -614,7 +633,7 @@ int clm(int n, int m){
 }
 ```
 
-* offer专项 [ 按权重生成随机数](https://leetcode.cn/problems/cuyjEf/)
+* offer专项 071 [ 按权重生成随机数](https://leetcode.cn/problems/cuyjEf/)
   * 就是在权重范围内生成随机数，随机数落在哪个区间，就返回那个区间对应的数
 
 
@@ -681,6 +700,8 @@ public:
 
 ##  动态规划
 
+* 42 [接雨水](https://leetcode.cn/problems/trapping-rain-water/)
+
 offer专项 088-105
 
 * 092 [翻转字符](https://leetcode.cn/problems/cyJERH/)
@@ -719,10 +740,10 @@ offer专项 105-
   * 不会， 复习
   * 图的构建不熟悉，复习
   * 遍历记得标记已经遍历的元素
-  * 广度优先
+  * 广度优先，找最短路径，记录层数的方法
 * 111 [计算除法](https://leetcode.cn/problems/vlzXQL/)
   * 构建图，不熟悉，复习
-  * 广度优先
+  * 广度优先，**记录路径**
 
 
 #  PS
@@ -1009,6 +1030,37 @@ list
 * push_back
 * pop_back
 * erase
+
+
+
+### priority_queue
+
+* 默认是最大堆
+* 改为最小堆
+
+```C++
+priority_queue<int, vector<int>, greater<int>>
+```
+
+* 自定义比较函数
+
+```c++
+// 个位数大的在前
+bool myCom(int a, int b){
+  return a%10 < b%10;
+}
+
+priority_queue<int, vector<int>, decltype(myCom)> pq(myCom);
+
+// 转为最小堆
+auto cmp = [](ListNode* l1, ListNode* l2){
+  return l1->val > l2->val;
+};
+
+priority_queue<ListNode*, vector<ListNode*>, decltype(cmp)> pq(cmp); // decltype 用于数据类型的推导
+```
+
+###  
 
 ###  二分查找
 
@@ -1506,24 +1558,6 @@ s.push_back(c);
 * __builtin_ctz
   * 这个函数作用是返回输入数二进制表示从最低位开始(右起)的连续的0的个数；如果传入0则行为未定义
 
-##  数值
-
-```c++
-1e9+7 // 10^9+7  一个比较大的质数
-```
-
-**取绝对值**
-
-abs()
-
-**使用最大最小值**
-
-```c++
-<limits.h>
-LONG_MIN
-L
-```
-
 **二进制1个数**
 
 > [三种求二进制1个数的办法](https://leetcode.cn/problems/hamming-distance/)
@@ -1548,7 +1582,29 @@ L
 Brian Kernighan 算法的原理是：对于任意整数x, 令 x = x & (x-1) 该运算将 x 的二进制表示的最后一个 1 变成 0
 ```
 
-**保留小数点后n位**
+
+
+##  数值
+
+```c++
+1e9+7 // 10^9+7  一个比较大的质数
+```
+
+**取绝对值**
+
+abs()
+
+**使用最大最小值**
+
+```c++
+<limits.h>
+LONG_MIN
+L
+```
+
+
+
+保留小数点后n位**
 
 > https://zhidao.baidu.com/question/1431242996370114299.html
 
