--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -424,6 +424,9 @@ ls.pop_back();
   * 双指针，只遍历一遍，前后指针差为n，巧妙，记忆
 * 2 [两数相加](https://leetcode.cn/problems/add-two-numbers/)
   * 不使用原链表，返回链表不算空间
+* [445. 两数相加 II](https://leetcode.cn/problems/add-two-numbers-ii/)
+  * 链表翻转则和2一样
+  * 链表不翻转，使用栈（要额外的空间）
 * 19  [删除链表的倒数第 n 个结点](https://leetcode.cn/problems/SLwz0R/)
 * 21 [ 合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/)
   * 类比数组归并，小的压入数组，就相当p->next = 小的
@@ -440,11 +443,86 @@ ls.pop_back();
   * 自顶向下好写
   * 自底向上复杂，复习
 * 206 [反转链表](https://leetcode.cn/problems/reverse-linked-list/)
+* 92 反转链表II 有难度
+  * 只遍历一遍如何实现
+    * 翻转不要抽离出去，直接就地翻转
+* 25 [K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/)  困难
+  * 也不是很难，关键在于定位要翻转的范围
 * 234 [ 回文链表](https://leetcode.cn/problems/palindrome-linked-list/)
   * 找中心点，反转，比对，每个步骤都分开做，因为合在一起太复杂，容易错
 * offer 专项077 [链表排序](https://leetcode.cn/problems/7WHec2/)
   * 148
   * 归并排序，复习复习复习！！！  考察归并和链表
+* [83. 删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/)
+  * *删除所有重复的元素，使每个元素只出现一次*
+
+* 82 [删除排序链表中的重复元素 II](https://leetcode.cn/problems/remove-duplicates-from-sorted-list-ii/)
+  *  *删除原始链表中所有重复数字的节点，只留下不同的数字*
+
+
+* [86. 分隔链表](https://leetcode.cn/problems/partition-list/)
+  * 借用92中一次遍历的思想
+  * 官方解法： 维护两个链表也很简便
+* [328. 奇偶链表](https://leetcode.cn/problems/odd-even-linked-list/)
+  * 借用86中维护两个链表的思想
+  * 具体实现方式略有不同
+* [203. 移除链表元素](https://leetcode.cn/problems/remove-linked-list-elements/)
+* [24. 两两交换链表中的节点](https://leetcode.cn/problems/swap-nodes-in-pairs/)
+* 143[ 重排链表](https://leetcode.cn/problems/reorder-list/)
+  * 考察点多  重做复习
+  * 快慢指针找中点
+  * 链表翻转
+  * 链表合并
+* [147. 对链表进行插入排序](https://leetcode.cn/problems/insertion-sort-list/)
+  * 模拟插入排序
+  * 满足升序 直接往后走 
+  * 不满足则该节点需要前移
+
+**常见记录**
+
+```c++
+// 反转链表
+ListNode* reverse(ListNode* head){
+  ListNode* pre = nullptr;
+  while (head)
+  {
+    ListNode* temp = head->next;
+    head->next = pre;
+    pre = head;
+    head = temp;
+  }
+  return pre;
+}
+
+// 合并两个单链表 l1长于l2的情况可以完全链接上  l2长于l1时，l2后半段会丢失
+void mergeList(ListNode* l1, ListNode* l2){
+  ListNode* ll1;
+  ListNode* ll2;
+  while (l1 && l2)
+  {
+    ll1 = l1->next;
+    ll2 = l2->next;
+      
+    l1->next = l2;
+    l1 = ll1;
+      
+    l2->next = l1;
+    l2 = ll2;
+  }
+}
+
+// 找链表的中点
+ListNode* midList(ListNode* head){
+  ListNode* slow = head;
+  ListNode* fast = head;
+  while (fast->next && fast->next->next)
+  {
+    slow = slow->next;
+    fast = fast->next->next;
+  }
+  return slow;
+}
+```
 
 
 
