--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -477,6 +477,9 @@ ls.pop_back();
   * 模拟插入排序
   * 满足升序 直接往后走 
   * 不满足则该节点需要前移
+* 237 删除单链表节点
+* 61 [旋转链表](https://leetcode.cn/problems/rotate-list/)
+  * 官方解法更好
 
 **常见记录**
 
@@ -557,8 +560,6 @@ ListNode* midList(ListNode* head){
         return root1;
 ```
 
-
-
 * 94 [二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
   * 非递归，复习
 * 96 [不同的二叉搜索树](https://leetcode.cn/problems/unique-binary-search-trees/)
@@ -595,6 +596,10 @@ ListNode* midList(ListNode* head){
   * 前缀和
   * unordered_map中不使用的元素实时移除，性能更高
   * 注意溢出
+  * 查看答案 待复习  
+    * 方法1：巧妙  递归的嵌套
+    * 方法2：前缀和   注意：利用进入递归更新，推出递归还原
+  * 注意考虑是否有负数
 * 538 [把二叉搜索树转换为累加树](https://leetcode.cn/problems/convert-bst-to-greater-tree/)
   * 递归思想
   * 利用全局变量
