--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -608,6 +608,27 @@ ListNode* midList(ListNode* head){
 * 617 [合并二叉树](https://leetcode.cn/problems/merge-two-binary-trees/)
   * 递归思想
   * 判断优化
+* 111 [二叉树的最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/)
+* 100 [ 相同的树](https://leetcode.cn/problems/same-tree/)
+* 222 [完全二叉树的节点个数](https://leetcode.cn/problems/count-complete-tree-nodes/)
+  * 利用编号的巧妙性进行位运算   有难度待复习
+  * 二分搜索
+  * **复习  理解位运算**
+* 110 [平衡二叉树](https://leetcode.cn/problems/balanced-binary-tree/)
+* 112 [ 路径总和](https://leetcode.cn/problems/path-sum/)
+* 404 [左叶子之和](https://leetcode.cn/problems/sum-of-left-leaves/)
+* 257 [二叉树的所有路径](https://leetcode.cn/problems/binary-tree-paths/)
+* 113 [路径总和 II](https://leetcode.cn/problems/path-sum-ii/)
+* 129 [求根节点到叶节点数字之和](https://leetcode.cn/problems/sum-root-to-leaf-numbers/)
+* 235 [二叉搜索树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-search-tree/)
+  * 注意是：二叉搜索树，是有大小关系的
+* 450 [删除二叉搜索树中的节点](https://leetcode.cn/problems/delete-node-in-a-bst/)
+  * 递归
+  * **重要 复习 迭代 理解指针**
+* 108 [将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/)
+* **230** [二叉搜索树中第K小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/)
+  * 进阶  红黑树
+  * **重要 复习  迭代中序遍历**
 
 ##  单调栈
 
@@ -624,22 +645,23 @@ ListNode* midList(ListNode* head){
 >
 > 典型案例：84
 
+* 739 [每日温度](https://leetcode.cn/problems/daily-temperatures/)
+  *  栈存储index值，通过 t[st[i]]拿到值
+* 84 [ 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
+  * 找到左边第一个比当前元素小的，找到右边第一个比当前元素小的
+  * 注意初始化
+* 85 [最大矩形](https://leetcode.cn/problems/maximal-rectangle/)
+  * 需要依赖84才能做出来，没有84的基础基本做不了
+
 *  581 [最短无序连续子数组](https://leetcode.cn/problems/shortest-unsorted-continuous-subarray/)
    *  感觉和单调栈没啥关系
    *  双指针，模拟正常思考过程
    *  往右走，则需要一直递增，若不满足则记录该位置，该位置是需要往左移动的，往右走完，记录的就是最右需要往左移的位置
       *  往左走，则需要一直低价，若满足，，，
-*  739 [每日温度](https://leetcode.cn/problems/daily-temperatures/)
-   *  栈存储index值，通过 t[st[i]]拿到值
 *  42 [接雨水](https://leetcode.cn/problems/trapping-rain-water/)
    *  动态规划易理解   推荐
-*  双指针的策略没有理解透彻，复习，对动态规划的优化，不易理解
+   *  双指针的策略没有理解透彻，复习，对动态规划的优化，不易理解
    *  单调栈不简洁，不易理解
-*  84 [ 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
-   * 找到左边第一个比当前元素小的，找到右边第一个比当前元素小的
-   * 注意初始化
-*  85 [最大矩形](https://leetcode.cn/problems/maximal-rectangle/)
-   * 需要依赖84才能做出来，没有84的基础基本做不了
 
 ##  回溯
 
