--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -671,16 +671,113 @@ ListNode* midList(ListNode* head){
 >
 > 3 尽可能在原数组上标记，不用额外开空间，节省了空间，性能也更好
 
-* 17 [电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
+* 17 [ 电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
 * 22 [ 括号生成](https://leetcode.cn/problems/generate-parentheses/)
   * 不熟练，复习，，，，
   * 每次有两个选择，要么加入'('、要么加入')', 所以需要回溯保证，每层只加入一种
+* 93 [复原 IP 地址](https://leetcode.cn/problems/restore-ip-addresses/)   重复做，考察细节
+* 131[分割回文串](https://leetcode.cn/problems/palindrome-partitioning/)
+  * 回溯+动态规划  提前预处理所有可能的回文串  因为回溯过程中有重复计算
+  * 动态规划记录所有回文串  再学习
+    * 从对角线开始往两边扩展
+    * 初始化顺序，根据下一步要是的情况，决定这一步先初始化哪里
+
+```c++
+// 动态规划记录所有回文串
+// f[i][j] = f[i+1][j-1] && s[i]==s[j]
+// f[i][j] = true && i >= j
+// "aa" f[0][0] = true, f[1][0]==true 
+// f[0][1] == f[1][0] && s[0]==s[1]   只有f[1][0]==true 才能保证结果正确
+
+f.assign(n, vector<bool>(n,true));
+for(int i = n-1; i >=0; --i){ // 注意i是从大到小开始初始化，因为递推公式需要用f[i+1][j-1]所以需要先知道i+1
+  for(int j = i+1; j<n; ++j){
+    f[i][j] = (s[i] == s[j]) && f[i+1][j-1];
+  }
+}
+```
+
+
+
+**排列组合**
+
+> 先排序有利于解决问题
+>
+> 对于重复的元素，采用**标记**的方式，相同的元素只有在前面的元素使用后后面的元素才能使用，保证排列组合不会重复
+
+**全排列**
+
+* 46 [ 全排列](https://leetcode.cn/problems/permutations/)
+  * 动态维护数组的方式 巧妙 学习
+
+* 47 [全排列 II](https://leetcode.cn/problems/permutations-ii/)
+  * 注意去重的方法  复习
+  * 有重复元素且每个元素只能使用一次
+    * 解决方案： 排序，标记使用过的，相同的元素，只有前面一个使用过了后面的才能使用
+
+
+
+**组合**
+
+* 77 [ 组合](https://leetcode.cn/problems/combinations/)
 * 39 [组合总和](https://leetcode.cn/problems/combination-sum/)
-* 46 [全排列](https://leetcode.cn/problems/permutations/)
-  * swap + 原数组操作 ， 复习
-* 78 [ 子集](https://leetcode.cn/problems/subsets/)
-* 79 [单词搜索](https://leetcode.cn/problems/word-search/)
-  * 递归+剪枝
+* 40 组合总和 II
+  * 有重复元素且每个元素只能使用一次
+
+* 216 [组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
+* 78 [子集](https://leetcode.cn/problems/subsets/)
+* 90 [子集 II](https://leetcode.cn/problems/subsets-ii/)
+* 401[二进制手表](https://leetcode.cn/problems/binary-watch/)
+  * 注意官方解答，不要把问题复杂化， 复习
+
+**二维平面的回溯**
+
+> 使用偏移量数组简化代码量，但可能影响性能，多了判断
+
+* 79 [ 单词搜索](https://leetcode.cn/problems/word-search/)
+  * 在原数组上进行标记，不用额外开空间，节省了空间
+
+
+**floodfill**
+
+* 200 [ 岛屿数量](https://leetcode.cn/problems/number-of-islands/)
+  * 原数组标记
+
+* 130 [被围绕的区域](https://leetcode.cn/problems/surrounded-regions/)
+  * 原数组标记
+  * 位移判断优化和代码简化优化
+  * 代码简化会导致压栈太多，可能导致性能不如原始版本
+
+* 417 [太平洋大西洋水流问题](https://leetcode.cn/problems/pacific-atlantic-water-flow/)
+  * 1 参考答案，待复习
+  * 2 参考答案内存开销更小
+
+**n皇后问题**
+
+* 51 [N 皇后](https://leetcode.cn/problems/n-queens/)
+  * 看解析 看视频讲解8-8  待复习
+  * 下图的方式标记斜线是否可以放置，也可以用二进制数来标记(巧妙)
+    * 二进制部分没懂 待学习
+* 52 N皇后2
+
+![image-20221117203645300](hot100/image-20221117203645300.png)
+
+![image-20221117203736258](hot100/image-20221117203736258.png)
+
+* 37 [解数独](https://leetcode.cn/problems/sudoku-solver/)
+  * 参考官方解答，对于3*3块的记录
+  * 位运算优化待学习
+
+
+
+
+
+
+
+
+
+
+
 * 301 [ 删除无效的括号](https://leetcode.cn/problems/remove-invalid-parentheses/)
   * 困难，待做
   * 广度优先，最短，最少就用广度优先
@@ -693,7 +790,7 @@ ListNode* midList(ListNode* head){
   * 排序
     * 保证和前一个元素不同
     * 标记
-  
+
 * offer专项[085. 生成匹配的括号](https://leetcode.cn/problems/IDBivT/)
   * 不熟悉，复习
 
