--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -577,9 +577,13 @@ public:
 
 ##  数组
 
-* 283
-* 27
-* 26
+* [283. 移动零](https://leetcode.cn/problems/move-zeroes/)
+  * 双指针
+
+* [27. 移除元素](https://leetcode.cn/problems/remove-element/)
+  * 双指针 同上
+
+* [26. 删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/)
 * 80
 
 **排序应用**
