--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -584,35 +584,57 @@ public:
   * 双指针 同上
 
 * [26. 删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/)
-* 80
+  * 双指针 同上
+
+* [80. 删除有序数组中的重复项 II](https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/)
+  * 双指针   注意范围
+
 
 **排序应用**
 
-* 75
+* [75. 颜色分类](https://leetcode.cn/problems/sort-colors/)
   * 计数排序
   * 三路快排（适用于重复元素较多的情况）
-* 88
+    * [0,lt] == 0    lt是闭区间 则lt初始=-1  如果初始lt=0  那么久默认0位置就是==0了
+    * [lt+1, i) ==  1
+    * [gt, n-1] == 2  同理 gt是闭区间 所以gt初始=n
+* [88. 合并两个有序数组](https://leetcode.cn/problems/merge-sorted-array/)
   * 逆向双指针
 
-* 215
+* [215. 数组中的第K个最大元素](https://leetcode.cn/problems/kth-largest-element-in-an-array/)
   * 三路快排
 
 
 **对撞指针**
 
-* 167
-* 125
-* 344
-* 11 有难度
+* [167. 两数之和 II - 输入有序数组](https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/)
+* [125. 验证回文串](https://leetcode.cn/problems/valid-palindrome/)
+  * 字符串操作  isalnum  tolower
+
+* [344. 反转字符串](https://leetcode.cn/problems/reverse-string/)
+* [11. 盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/) 
+  * 有难度
+  * 看解析
+
 
 **滑动窗口**
 
 > 定宽窗口和变宽窗口有区别
 
-* 209
-* 3
-* 438  方法值得再研究
-* 76
+* [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/)
+  * 在有效时记录窗口宽度
+
+* [3. 无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
+  * 不方便while滑动时 就一步一步的滑动
+
+* [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
+  *   方法值得再研究
+  * 记录每个需要字符的状态  对状态改变时修改need
+  * 定宽滑动
+
+* [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
+  * 变宽滑动
+
 
 ##  查找
 
@@ -1945,82 +1967,32 @@ INT_MIN = -2^31
 
 atoi()和stoi()
 
->[atoi()和stoi()的区别](https://www.jianshu.com/p/e700ac920249)
-
 * atoi()和stoi()函数都是只转换字符串的数字部分，如果遇到其它字符的话则停止转换
 * 只返回有效数字 0123返回123
 
-```c++
-#include <cstdio>
-#include <iostream>
-#include <string>
-using namespace std;
-int main(){
-    char str[] = {'1','2','a','3'};
-    string str1 = "12aa3";
-    //遇到了'a'字符，停止数字转换
-    cout << atoi(str) << endl;   // 打印 12
-    //遇到了'a'字符，停止数字转换
-    cout << stoi(str1) << endl;  // 打印 12
-    
-  string s = "0123";
-  int n = stoi(s);
-  cout<<s<<endl; // 0123
-  cout<<n<<endl; // 123
-    
-  string s = "0";
-  int n = stoi(s);
-  cout<<s<<endl;//0
-  cout<<n<<endl;//0
-}
+>[atoi()和stoi()的区别](https://www.jianshu.com/p/e700ac920249)
+
+* 相同点
+
+  - 都是C++的字符处理函数，把数字字符串转换成int输出
+
+  - 头文件都是`#include<cstring>`
+
+* 不同点
+
+* <1>参数类型不同
+
+  - `atoi()`的参数是 `const char*` ,因此对于一个字符串str我们必须调用 `c_str()`的方法把这个`string`转换成 `const char*`类型。
+
+  - `stoi()`的参数是`const string&`,不需要转化为 `const char*`
+
+* <2>范围检查
+  * `atoi()`不会做范围检查，如果超出范围的话，超出上界，则输出上界，超出下界，则输出下界；
+  * `stoi()`会做范围检查，默认范围是在int的范围内的，如果超出范围的话则会吐核超出范围。
+
+![img](https:////upload-images.jianshu.io/upload_images/20260225-f580a07018d6c8c7.png?imageMogr2/auto-orient/strip|imageView2/2/w/627/format/webp)
 
 
-class Solution {
-public:
-  vector<string> res;
-  bool isTrue(string s){
-    if(s.length() > 1 && s[0] == '0') return false;//
-    int it = stoi(s);
-    if(it >=0 && it <= 255){
-      return true;
-    }
-    return false;
-  }
-  void dfs(string& s, int index, int need, vector<string>&  pre){
-    if(need == 0){ // 最后一层长度一定满足条件
-      string last = s.substr(index);
-      if(!isTrue(last)) return;
-      string temp = "";
-      for(auto& s : pre){
-        temp = temp + s + ".";
-      }
-      temp += last;
-      res.push_back(temp);
-      return;
-    }
-    for(int i = index; i<index+3 && i <s.length(); ++i){
-      int len = s.length() - i-1;
-      // cout<<"len: "<<len<<endl;
-      // cout<<"need: "<<need<<"   need*3: "<<need*3<<endl;
-      if(len>= need && len <= need*3){
-        string cur = s.substr(index, i-index+1);
-        if(!isTrue(cur)) return;
-        pre.push_back(cur);
-        dfs(s, i+1, need-1, pre);
-        pre.pop_back();
-      }
-    }
-  }
-  vector<string> restoreIpAddresses(string s) {
-    int len = s.length();
-    if(len < 4 || len > 12) return {};
-    vector<string> pre;
-    dfs(s, 0, 3, pre);
-    return res;
-  }
-};
-
-```
 
 **string转char**
 
@@ -2054,6 +2026,7 @@ to_string()
 
 ```c++
 #include<ctype.h>   // c++中使用不用引入头文件
+// 只能单个字符转换
 ```
 
 **判断字符数字**
