--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -620,12 +620,12 @@ public:
 >
 > map
 
-* 349
-* 350
-* 242
-* 202
-* 290
-* 205
+* [349. 两个数组的交集](https://leetcode.cn/problems/intersection-of-two-arrays/)
+* [350. 两个数组的交集 II](https://leetcode.cn/problems/intersection-of-two-arrays-ii/)
+* [242. 有效的字母异位词](https://leetcode.cn/problems/valid-anagram/)
+* [202. 快乐数](https://leetcode.cn/problems/happy-number/)
+* [290. 单词规律](https://leetcode.cn/problems/word-pattern/)
+* [205. 同构字符串](https://leetcode.cn/problems/isomorphic-strings/)
 * 451
 * 1
 * 15  三数之和   经典(看的解析)  时间复杂度高
