--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -648,16 +648,24 @@ public:
 * 202
 * 290
 * 205
-* 451
-* 1
-* 15  三数之和   经典(看的解析)  时间复杂度高
-* 18 四数之和    经典(看的解析)  时间复杂度高
+* [451. 根据字符出现频率排序](https://leetcode.cn/problems/sort-characters-by-frequency/)
+* [1. 两数之和](https://leetcode.cn/problems/two-sum/)
+* [15. 三数之和](https://leetcode.cn/problems/3sum/)
+  * 经典(看的解析)  时间复杂度高
+
+* [18. 四数之和](https://leetcode.cn/problems/4sum/)
+  * 经典(看的解析)  时间复杂度高
 * 16 [ 最接近的三数之和](https://leetcode.cn/problems/3sum-closest/)
 * [454. 四数相加 II](https://leetcode.cn/problems/4sum-ii/)  (看的解析)
-  * 自己写哈希函数，待实现
-* 447
-* 149  困难 优化点很多 多方考虑
+  * 就是枚举  不要想复杂了
+  * 数学问题
+* [447. 回旋镖的数量](https://leetcode.cn/problems/number-of-boomerangs/)
+  * 数学问题
+
+* [149. 直线上最多的点数](https://leetcode.cn/problems/max-points-on-a-line/)
+  *   困难 优化点很多 多方考虑
   * 键值：两个有范围的数 如何相加得到一个独一无二的数 计算之后的和分布在不同的区间
+
 
 ```
 x,y都是整数
@@ -670,13 +678,26 @@ x = x * (2*10^4+1)后  x的间距变为2*10^4+1 正好可以容下y的区间  x+
 
 **查找表+滑动窗口**
 
-* 219
-* 217
+* [219. 存在重复元素 II](https://leetcode.cn/problems/contains-duplicate-ii/)
+  * Unordered_map
+  * 滑动窗口
+
+* [217. 存在重复元素](https://leetcode.cn/problems/contains-duplicate/)
+  * unordered_set
+
 
 **二分搜索树+滑动窗口**
 
-* 220  也可以是map处理（官方解答，时间复杂度更小），不用二分搜索(set就是也给二分搜索树)
-  * map的方式实际用时似乎没有更少
+* [220. 存在重复元素 III](https://leetcode.cn/problems/contains-duplicate-iii/)
+  * 使用set   复习
+  * 桶排序比较复杂
+
+
+| [lower_bound](https://zh.cppreference.com/w/cpp/container/map/lower_bound) | 返回指向首个*不小于*给定键的元素的迭代器 (公开成员函数) |
+| ------------------------------------------------------------ | ------------------------------------------------------- |
+| [upper_bound](https://zh.cppreference.com/w/cpp/container/map/upper_bound) | 返回指向首个*大于*给定键的元素的迭代器                  |
+
+
 
 ##  差分数组
 
@@ -693,13 +714,54 @@ x = x * (2*10^4+1)后  x的间距变为2*10^4+1 正好可以容下y的区间  x+
   * 重要等式: [证明](https://leetcode.cn/problems/smallest-integer-divisible-by-k/solutions/2263780/san-chong-suan-fa-you-hua-pythonjavacgo-tk4cj/)
     * `(a+b)%m = (a%m+b%m)%m`
     * `(a*b)%m = ((a%m)*(b%m))%m`
+* 快速幂[50. Pow(x, n)](https://leetcode.cn/problems/powx-n/)
+  * [快速幂/快速乘](https://blog.csdn.net/liangllhahaha/article/details/82119378)
+
+
+```c++
+// 快速幂
+int ksm(int a, int b) { // 计算a^b
+  int ans = 1;
+  int base = a;
+  while (b) {
+    if ((b&1) != 0) {
+      // 避免ans越界 可以用上线除以base 看是否小于ans  如果是则可以*base  否则不能
+      ans *= base;
+    }
+    base *= base;
+    b >>= 1;
+  }
+  return ans;
+}
+```
+
+
+
+```c++
+// 快速乘
+int ksc(int a, int b) { // 计算a*b
+  int ans = 0;
+  int base = a;
+  while (b) {
+    if ((b&1) != 0) {
+      ans += base;
+    }
+    base += base;
+    b >>= 1;
+  }
+  return ans;
+}
+```
+
+
+
 * 29 [两数相除](https://leetcode.cn/problems/divide-two-integers/)
 
 快速幂/快速乘： 下面的面试部分有讲解
 
 最大公因数： gcd(n,m)
 
-> [辗转相除法](ttps://blog.csdn.net/qq_36834256/article/details/79381912)
+> [辗转相除法](https://blog.csdn.net/qq_36834256/article/details/79381912)
 
 ```c++
 // 辗转相除法
@@ -742,7 +804,7 @@ int clm(int n, int m){
 
 > [视频讲解](https://www.bilibili.com/video/BV1QT4y1Z7rR/?spm_id_from=333.337.search-card.all.click&vd_source=7230a052308bbb41976f248d2c778e3a)
 
-* offer 专项 058
+* [LCR 058. 我的日程安排表 I](https://leetcode.cn/problems/fi9suh/)
   * map + 二分查找，简洁，易懂
     * 容器查找为空则结果等于begin，容器为空的情况下begin == end   不熟悉，复习
 
@@ -758,12 +820,18 @@ int clm(int n, int m){
 
 * offer专项 067 [ 最大的异或](https://leetcode.cn/problems/ms70jA/)
   * 字典树处理，看解析，第一个评论解析比官方更易理解
+  * 复习 容易忘
 
 
 
 ##  二分查找
 
 offer专项 068 --- 073
+
+* [LCR 068. 搜索插入位置](https://leetcode.cn/problems/N6YdxV/)
+* [LCR 069. 山脉数组的峰顶索引](https://leetcode.cn/problems/B1IidL/)
+* [LCR 070. 有序数组中的单一元素](https://leetcode.cn/problems/skFtm2/)
+* [LCR 071. 按权重随机选择](https://leetcode.cn/problems/cuyjEf/)
 
 * offer 专项 072 [求平方根](https://leetcode.cn/problems/jJ0w9p/)
   * 学习这种写法，多场景可用，记录可能满足的情况(and = mid)
@@ -787,6 +855,10 @@ public:
     }
 };
 ```
+
+* [LCR 073. 爱吃香蕉的狒狒](https://leetcode.cn/problems/nZZqjQ/)
+
+
 
 ##  **栈、队列**
 
@@ -1291,6 +1363,15 @@ offer专项 088-105
 ```
 
 ## 牛客面经
+
+> [有环或无环链表的相交问题](https://blog.csdn.net/u011386173/article/details/125295165)
+>
+> 情况2：一个链表有环，一个链表无环，这种情况不可能相交     相交后共用  一个有环 另一个一定也有  可以相交在环之前  也可以相交在换上
+>
+> 两个链表相交，且两个链表的入环节点是同一个（loop1 = loop2，就认为 loop1 和 loop2 是终止节点，问题就变成了两个无环链表找第一个相交节点）       loop1 = loop2表示入环点相同 就可以确定是情况2了，，，
+>
+> 重要思想：如果两个单链表有共同的节点，那么从第一个共同节点开始，后面的节点都会重叠，直到链表结束。
+> 因为两个链表中有一个共同节点，则这个节点里的指针域指向的下一个节点地址一样，所以下一个节点也会相交，依次类推
 
 1. 怎么判断链表相交
 2. 怎么判断链表有环
